--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.0",
     "bcrypt": "^5.1.1",
