--- a/front-end/package.json
+++ b/front-end/package.json
@@ -51,6 +51,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3080720230703001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
+    "dayjs": "^1.11.10",
     "pinia": "2.0.33",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
