--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon ."
+    "serve": "nodemon .",
+    "serve2": "pm2 start ."
   },
   "keywords": [],
   "author": "",
